[gd_scene load_steps=4 format=3 uid="uid://dgs0l2ynqrnx1"]

[ext_resource type="PackedScene" uid="uid://b0fep0a8toxbc" path="res://src/ui/menu/widget/menu_container.tscn" id="1_7hdff"]
[ext_resource type="PackedScene" uid="uid://dov3l4ful35q5" path="res://src/ui/menu/widget/save_button.tscn" id="2_y7bpm"]
[ext_resource type="Script" uid="uid://c8qn3olmap0t4" path="res://src/ui/menu/new_game_container.gd" id="2_yy6ko"]

[node name="NewGameContainer" node_paths=PackedStringArray("first_focus") instance=ExtResource("1_7hdff")]
script = ExtResource("2_yy6ko")
first_focus = NodePath("ContentContainer/GridContainer/SaveButton0")
menu_id = 3
title = "TITLE_NEW_GAME"

[node name="TitleLabel" parent="TitleContainer" index="1"]
text = "SAVE_TITLE"

[node name="GridContainer" type="GridContainer" parent="ContentContainer" index="0"]
layout_mode = 2
columns = 2

[node name="Label0" type="Label" parent="ContentContainer/GridContainer" index="0"]
layout_mode = 2
text = "1"
vertical_alignment = 1

[node name="SaveButton0" parent="ContentContainer/GridContainer" index="1" instance=ExtResource("2_y7bpm")]
layout_mode = 2
save_name = "save0"

[node name="Label1" type="Label" parent="ContentContainer/GridContainer" index="2"]
layout_mode = 2
text = "2"
vertical_alignment = 1

[node name="SaveButton1" parent="ContentContainer/GridContainer" index="3" instance=ExtResource("2_y7bpm")]
layout_mode = 2
save_name = "save1"

[node name="Label2" type="Label" parent="ContentContainer/GridContainer" index="4"]
layout_mode = 2
text = "3"
vertical_alignment = 1

[node name="SaveButton2" parent="ContentContainer/GridContainer" index="5" instance=ExtResource("2_y7bpm")]
layout_mode = 2
save_name = "save2"

[node name="Label3" type="Label" parent="ContentContainer/GridContainer" index="6"]
layout_mode = 2
text = "4"
vertical_alignment = 1

[node name="SaveButton3" parent="ContentContainer/GridContainer" index="7" instance=ExtResource("2_y7bpm")]
layout_mode = 2
save_name = "save3"

[node name="Label4" type="Label" parent="ContentContainer/GridContainer" index="8"]
layout_mode = 2
text = "5"
vertical_alignment = 1

[node name="SaveButton4" parent="ContentContainer/GridContainer" index="9" instance=ExtResource("2_y7bpm")]
layout_mode = 2
save_name = "save4"

[connection signal="focus_entered" from="ContentContainer/GridContainer/SaveButton0" to="." method="_on_save_button_focus_entered"]
[connection signal="pressed" from="ContentContainer/GridContainer/SaveButton0" to="." method="_on_save_button_pressed"]
[connection signal="focus_entered" from="ContentContainer/GridContainer/SaveButton1" to="." method="_on_save_button_focus_entered"]
[connection signal="pressed" from="ContentContainer/GridContainer/SaveButton1" to="." method="_on_save_button_pressed"]
[connection signal="focus_entered" from="ContentContainer/GridContainer/SaveButton2" to="." method="_on_save_button_focus_entered"]
[connection signal="pressed" from="ContentContainer/GridContainer/SaveButton2" to="." method="_on_save_button_pressed"]
[connection signal="focus_entered" from="ContentContainer/GridContainer/SaveButton3" to="." method="_on_save_button_focus_entered"]
[connection signal="pressed" from="ContentContainer/GridContainer/SaveButton3" to="." method="_on_save_button_pressed"]
[connection signal="focus_entered" from="ContentContainer/GridContainer/SaveButton4" to="." method="_on_save_button_focus_entered"]
[connection signal="pressed" from="ContentContainer/GridContainer/SaveButton4" to="." method="_on_save_button_pressed"]
